# algorithms_from_scratch

./: .gitignore  makefile  pyproject.toml  readme.md
machine_learning/large_language_models/: gpt_tokenizer.ipynb
machine_learning/large_language_models/data/: herman_finkers.txt  tekst.txt
machine_learning/nearest_neighbours/: knn_classifier.py
miscellaneous/water_ripples/: water_ripples.py  water_ripples_in_image.py  water_ripples_in_image_old.py  water_ripples_trapezoid.py
miscellaneous/water_ripples_two_dimensional/: main.py  water_ripples.py  water_ripples_in_image.py
terrain_generation/diamond_square/: constants.py  diamond_square.py  main.py
terrain_generation/machine_learning/large_language_models/: gpt_tokenizer.ipynb
terrain_generation/wave_function_collapse/: bitmap.py  cell.py  config.yaml  config_manager.py  constants.py  grid_cell.py  main.py  readme.md  readme.todo  tile.py  visualize.py  wfc.py
terrain_generation/wave_function_collapse/bitmaps/: .~lock.city.xlsx#  city.xlsx  mountains.xlsx
terrain_generation/wave_function_collapse/configs/: config_core.yaml  config_runtime.yaml
